--- a/street.html
+++ b/street.html
@@ -49,11 +49,14 @@
   <!-- ======= Navbar ======= -->
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
-      <a  class="navbar-brand" target="_blank" href="https://instagram.com/"">NOM DE L'ARTISTE</a>
+      <a  class="navbar-brand" >NOM DE L'ARTISTE</a>
 	  <a  href="iframe.html" style="height: 50px; margin-right:10px">
 	  <i class="bi bi-house" style="font-size: 2rem; position: relative;"></i>
-		</a>
+    </a>
     </div>
+    <div class="container">
+    <a class="artistlink" target="_blank" href="https://instagram.com/mi.uqam"><span class="bi bi-instagram"></span> Artiste.lol</a>
+  </div>
   </nav>
 
   <main id="main">
